Fix html bg color in dark mode

--- a/freesound/static/bw-frontend/styles/layout/global.scss
+++ b/freesound/static/bw-frontend/styles/layout/global.scss
@@ -3,7 +3,7 @@
 }
 
 html {
-  background-color: $black;
+  background-color: $html-bg;
   scroll-behavior:smooth;
   scroll-padding-top: 110px;
 }
