--- a/freesound/static/bw-frontend/styles/variables/colors.scss
+++ b/freesound/static/bw-frontend/styles/variables/colors.scss
@@ -37,5 +37,6 @@ $background-input: $almost-white;
 $background-textarea: $almost-white;
 
 $color-footer: $black;
+$html-bg: $black;
 
 $explicit-sound-overlay: rgba(255,255,255,0.5);
