--- a/freesound/static/bw-frontend/styles/variables/dark-theme.scss
+++ b/freesound/static/bw-frontend/styles/variables/dark-theme.scss
@@ -36,6 +36,7 @@
     $background-textarea: $almost-white;
     
     $color-footer: #0f0f1b;
+    $html-bg: #0f0f1b;
 
     $explicit-sound-overlay: rgba(#11111d,0.5);
 
